add categories to search results
